# Boswell

./: .commit-msg-grpc.txt  .commit-msg.txt  .gitignore  Cargo.toml  README.md
config/: router.toml
crates/boswell-cli/: Cargo.toml  README.md
crates/boswell-cli/src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  output.rs  repl.rs
crates/boswell-cli/src/commands/: assert.rs  connect.rs  forget.rs  learn.rs  mod.rs  profile.rs  query.rs  search.rs
crates/boswell-domain/: Cargo.toml
crates/boswell-domain/src/: claim.rs  confidence.rs  confidence_computation.rs  lib.rs  namespace.rs  provenance.rs  relationship.rs  tier.rs  traits.rs
crates/boswell-extractor/: Cargo.toml  README.md
crates/boswell-extractor/src/: chunking.rs  config.rs  error.rs  extractor.rs  lib.rs  parser.rs  prompt.rs  tests.rs  types.rs
crates/boswell-gatekeeper/: Cargo.toml  README.md
crates/boswell-gatekeeper/src/: config.rs  error.rs  lib.rs  validator.rs
crates/boswell-grpc/: Cargo.toml  build.rs
crates/boswell-grpc/proto/: boswell.proto
crates/boswell-grpc/src/: conversions.rs  lib.rs  server.rs  service.rs
crates/boswell-janitor/: Cargo.toml  README.md
crates/boswell-janitor/src/: config.rs  error.rs  janitor.rs  lib.rs  metrics.rs  worker.rs
crates/boswell-llm/: Cargo.toml
crates/boswell-llm/src/: lib.rs  ollama.rs
crates/boswell-mcp/: CLAUDE_DESKTOP.md  Cargo.toml  README.md
crates/boswell-mcp/examples/: manual_test.sh
crates/boswell-mcp/src/: error.rs  lib.rs  main.rs  protocol.rs  server.rs
crates/boswell-mcp/src/tools/: assert.rs  forget.rs  learn.rs  mod.rs  query.rs  search.rs
crates/boswell-mcp/tests/: integration_tests.rs
crates/boswell-router/: Cargo.toml
crates/boswell-router/src/: config.rs  handlers.rs  lib.rs  main.rs  registry.rs  session.rs
crates/boswell-router/tests/: integration_tests.rs
crates/boswell-sdk/: Cargo.toml  README.md
crates/boswell-sdk/src/: client.rs  error.rs  lib.rs  session.rs
crates/boswell-sdk/tests/: e2e_tests.rs  integration_tests.rs
crates/boswell-store/: Cargo.toml
crates/boswell-store/src/: embedding.rs  lib.rs  schema.sql  vector_index.rs
crates/boswell-store/tests/: integration_tests.rs  semantic_search_tests.rs
crates/boswell-synthesizer/: Cargo.toml
crates/boswell-synthesizer/src/: lib.rs
docs/ADRs/: 001-claims-not-facts.md  002-pairwise-over-hyperedges.md  003-confidence-intervals.md  004-rust-language-choice.md  005-sqlite-plus-hnsw.md  006-convention-based-namespaces.md  007-hybrid-confidence-computation.md  008-gatekeeper-pattern.md  009-provenance-support-network.md  010-multi-instance-federation.md  011-ulid-over-uuid.md  012-learn-operation.md  013-local-embedding-models.md  014-offline-reindexing.md  015-pluggable-llm-providers.md  016-router-topic-classification.md  017-instance-level-security.md  018-batch-writes.md  019-stateless-sessions.md
docs/architecture/: 00-vision.md  01-architecture.md  02-claim-model.md  03-api-surface.md  04-claim-store.md  05-extractor.md  06-synthesizer.md  07-janitor.md  08-gatekeeper.md  09-router.md  10-security.md  11-llm-provider.md  12-embedding.md  13-confidence.md  14-contributing.md
docs/development/: phase-1-checklist.md  phase-2-checklist.md  phase-3-checklist.md  plan-boswellDevelopment.prompt.md
