[package]
name = "boswell-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "boswell"
path = "src/main.rs"

[dependencies]
boswell-domain = { workspace = true }
boswell-sdk = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# CLI dependencies (to be added)
# clap = { version = "4.5", features = ["derive"] }
