[package]
name = "boswell-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "boswell"
path = "src/main.rs"

[dependencies]
boswell-domain = { workspace = true }
boswell-sdk = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

# CLI dependencies
clap = { version = "4.5", features = ["derive", "env"] }
rustyline = "14.0"
tabled = "0.16"
colored = "2.1"
dirs = "5.0"
toml = "0.8"

[dev-dependencies]
tempfile = "3.10"
