[package]
name = "boswell-domain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
# Domain layer has ZERO external dependencies per ADR-004
# All functionality must be pure Rust standard library only

[dev-dependencies]
proptest = "1.5"
