[package]
name = "boswell-domain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
# ULID for claim identifiers (per ADR-011)
# This is an external dependency but provides a fundamental primitive
ulid = "1.1"

[dev-dependencies]
proptest = "1.5"
