[package]
name = "boswell-domain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
# UUIDv7 for claim identifiers (per ADR-011)
# This is an external dependency but provides a fundamental primitive
uuid = { version = "1", features = ["v7"] }

[dev-dependencies]
proptest = "1.5"
