[package]
name = "boswell-gatekeeper"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
boswell-domain = { workspace = true }
boswell-llm = { workspace = true }
boswell-store = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
tempfile = "3.8"
