[package]
name = "boswell-llm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
boswell-domain = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP client for LLM providers
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
