[package]
name = "boswell-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "boswell-mcp"
path = "src/main.rs"

[dependencies]
boswell-domain = { workspace = true }
boswell-sdk = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
