[package]
name = "boswell-sdk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
boswell-domain = { workspace = true }
boswell-grpc = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.12", features = ["json", "blocking"] }
tonic = "0.12"

[dev-dependencies]
tokio = { workspace = true }
