[package]
name = "boswell-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
boswell-domain = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# SQLite database
rusqlite = { version = "0.32", features = ["bundled"] }

# HNSW vector index for semantic search (ADR-005)
hnsw_rs = "0.3"

# ONNX Runtime for embeddings (to be integrated)
# ort = { version = "2.0", features = ["download-binaries"] }

# Serialization for embeddings
serde = "1.0"
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.10"
